[package]
name = "landy"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.47", features = ["derive"] }
rand = "0.9.2"
rmp-serde = "1.3.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
dashmap = "5"
thiserror = "1"
serde_json = "1.0.149"
scopeguard = "1.2.0"
nalgebra = "0.34.1"
anyhow = "1.0"
